fixed spacing for projects

--- a/css/style.css
+++ b/css/style.css
@@ -3416,6 +3416,11 @@ a.logo:hover{
 
 /* Work item hover state */
 
+
+.work-item.mix.photography{
+  position: absolute;
+  padding-bottom: 100px;
+}
 .work-intro{
     -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
     -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
